@startuml

title __TASK's Class Diagram__\n

  namespace com.fonzp.task {
    class com.fonzp.task.ArffBuilder {
        - error : String
        - inputStream : InputStream
        - output : File
        - result : boolean
        + getResult()
        + setInputStream()
        # doInBackground()
        # onFinish()
    }
  }
  

  namespace com.fonzp.task {
    class com.fonzp.task.ArffBuilder.Result {
        # error : String
        # output : File
        # result : Boolean
        + Result()
        + equals()
        + getError()
        + getOutput()
        + getResult()
        + hashCode()
        + toString()
    }
  }
  

  namespace com.fonzp.task {
    class com.fonzp.task.CSVExporter {
        {static} - PRIMARY_KEY_COLUMN_NAME : String
        - exportData : ArrayList<String>
        - output : File
        - result : boolean
        + CSVExporter()
        + doInBackground()
        + getResult()
    }
  }
  

  namespace com.fonzp.task {
    class com.fonzp.task.CSVExporter.Result {
        # exportData : ArrayList<String>
        # output : File
        # result : boolean
        + Result()
    }
  }
  

  namespace com.fonzp.task {
    class com.fonzp.task.ModelEnrichment {
        - arffFile : File
        - classIndex : Integer
        - classifier : FilteredClassifier
        - elapsedTime : long
        - error : String
        - filter : Filter
        - folds : Integer
        - measures : HashMap<String, Object>
        - result : boolean
        + getResult()
        + setArffFile()
        + setClassIndex()
        + setClassifier()
        + setFilter()
        + setFolds()
        # doInBackground()
    }
  }
  

  namespace com.fonzp.task {
    class com.fonzp.task.ModelEnrichment.Result {
        # elapsedTime : long
        # error : String
        # evaluation : HashMap<String, Object>
        # result : Boolean
        + Result()
        + getElapsedTime()
        + getError()
        + getEvaluation()
        + getResult()
    }
  }
  

  com.fonzp.task.ArffBuilder -up-|> com.fonzp.service.DatabaseTask
  com.fonzp.task.ArffBuilder +-down- com.fonzp.task.ArffBuilder.Result
  com.fonzp.task.CSVExporter -up-|> com.fonzp.service.DatabaseTask
  com.fonzp.task.CSVExporter +-down- com.fonzp.task.CSVExporter.Result
  com.fonzp.task.ModelEnrichment -up-|> com.fonzp.service.DatabaseTask
  com.fonzp.task.ModelEnrichment +-down- com.fonzp.task.ModelEnrichment.Result


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
